codec: webvtt: fix node reparenting on closing tags (fix #22887)